@@ -186,6 +186,16 @@ converter_delete_event_cb(GtkWidget *widget, GdkEventAny *e, gpointer user_data)
 	return TRUE;
 }
 
+static gboolean
+conv_key_press_cb (GtkWidget *widget, GdkEventKey *e, gpointer user_data)
+{
+	if (e->keyval == GDK_Escape) {
+		converter_delete_event_cb(widget, (GdkEventAny *)e, user_data);
+		return TRUE;
+	}
+	return FALSE;
+}
+
 Converter *
 create_converter()
 {
@@ -233,7 +243,9 @@ create_converter()
 						GTK_SIGNAL_FUNC(converter_delete_event_cb), conv);
 	gtk_signal_connect(GTK_OBJECT(converter_get), "clicked",
 						GTK_SIGNAL_FUNC(get_cursor_val_cb), conv);
-	gtk_table_attach_defaults(GTK_TABLE(table), converter_get, 0, 2, 5, 6);
+	gtk_signal_connect(GTK_OBJECT(conv->window), "key_press_event",
+					   G_CALLBACK(conv_key_press_cb), conv);
+ 	gtk_table_attach_defaults(GTK_TABLE(table), converter_get, 0, 2, 5, 6);
 
 	/* add the accelerators */
 	gtk_window_add_accel_group(GTK_WINDOW(conv->window), accel_group);
